[gd_scene load_steps=11 format=2]

[ext_resource path="res://TextGame.gd" type="Script" id=1]
[ext_resource path="res://gfx/background_1080p_psychostars_01.png" type="Texture" id=2]
[ext_resource path="res://Gidole-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/button_round_DARK.png" type="Texture" id=4]
[ext_resource path="res://gfx/button_round_LIGHT.png" type="Texture" id=5]
[ext_resource path="res://gfx/button_hovered.png" type="Texture" id=6]
[ext_resource path="res://gfx/button_disabled.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[node name="TextGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.337255, 0.337255, 0.337255, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 21.0
margin_right = -21.0
margin_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Textbox" type="Label" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 982.0
margin_bottom = 487.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 420 )
custom_fonts/font = SubResource( 1 )
text = "Textbox placeholder"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 491.0
margin_right = 982.0
margin_bottom = 558.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 812.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
placeholder_text = "PlayerInput placeholder"

[node name="GraphicButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 824.0
margin_right = 891.0
margin_bottom = 67.0
rect_min_size = Vector2( 67, 67 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
expand = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 903.0
margin_top = 17.0
margin_right = 982.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "Button"

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerInput" to="." method="_on_PlayerInput_enter_key"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GraphicButton" to="." method="_on_TextureButton_pressed"]
